fix text overflow in result panel

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -75,6 +75,9 @@
   flex-direction: column;
   justify-content: space-between;
 }
+.result-panel__output{
+  overflow-y: overlay;
+}
 .result-panel__possibility-count{
   font-size: 14px;
   color:#999;
